--- a/_harp/resume/index.jade
+++ b/_harp/resume/index.jade
@@ -1,5 +1,8 @@
-.container.page-wrapper
+.section
+  .container.page-header
+    h1 Resume
+    a(href="Teresa_Krause_resume.pdf") #[i.fa.fa-2x.fa-download] Download as a pdf
+
+.section
   .container.resume
-    a(href="Teresa_Krause_resume.pdf") Download as a pdf
     include:md /resume/_resume.md
-    
