--- a/_harp/style.scss
+++ b/_harp/style.scss
@@ -8,6 +8,13 @@ $white: #FFFFFF;
 body {
   background-color: $primary-color-dark;
   color: black;
+  a {
+    color: $primary-color-dark;
+    :hover {
+      color: $secondary-color-b;
+      text-decoration: none;
+    }
+  }
 }
 
 nav.navbar {
@@ -15,10 +22,8 @@ nav.navbar {
   border: none;
 }
 
-.container.page-header {
+.white {
   background-color: $white;
-  color: black;
-  border-bottom: 0px;
 }
 
 .section {
@@ -27,11 +32,28 @@ nav.navbar {
   }
   .container {
     background-color: $white;
+    padding-bottom: 15px;
+    h3 {
+      margin-bottom: 20px;
+    }
+    border-bottom-width: 10px;
+    border-bottom-color: $secondary-color-a;
+    border-bottom-style: solid;
+    margin-bottom: 20px;
+  }
+  .container.page-header {
+    background-color: $white;
+    color: black;
+    border-bottom-color: $secondary-color-b;
   }
   .container.spacer {
     height: 10px;
     margin-bottom: 40px;
   }
+}
+
+.section-white {
+  background-color: $white;
 }
 
 .section.colora {
@@ -46,15 +68,6 @@ nav.navbar {
   }
 }
 
-.section#contact-me {
-  a {
-    color: $primary-color-dark;
-    :hover {
-      color: $secondary-color-b;
-      text-decoration: none;
-    }
-  }
-}
 .jumbotron.header {
   background-color: white;
 }
@@ -66,4 +79,8 @@ nav.navbar {
 .horizontal-divider {
   background-color: rgb(51, 51, 51);
   height: 2px;
+}
+
+.row.contact-wrapper {
+  margin-bottom: 10px;
 }
