updates to layout and nav

--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -19,16 +19,16 @@ html(lang="en")
     script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
     title Teresa Krause
   body
-    nav.navbar.navbar-default
-      .container-fluid
-        .navbar-header
-          a.navbar-brand(href="/") Home
-        .navbar-collapse.collapsed
-          ul.nav.navbar-nav
-            li
-              a(href="/resume") Resume
-            li 
-              a(href="/projects") Projects
+    //- nav.navbar.navbar-default
+    //-   .container-fluid
+    //-     .navbar-header
+    //-       a.navbar-brand(href="/") Home
+    //-     .navbar-collapse.collapsed
+    //-       ul.nav.navbar-nav
+    //-         li
+    //-           a(href="/resume") Resume
+    //-         li 
+    //-           a(href="/projects") Projects
     != yield
   script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
   script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
