--- a/_harp/projects/index.jade
+++ b/_harp/projects/index.jade
@@ -1,7 +1,7 @@
 .section
   .container.page-header
-    h1 Projects
-    a(href="https://github.com/teresakrause") #[i.fa.fa-2x.fa-github-square] github.com/teresakrause
+    h1 #[a(href="/") #[i.fa.fa-home]] Projects
+    a(href="https://github.com/teresakrause") #[i.fa.fa.fa-github-square] github.com/teresakrause
 
 for project in public.projects._data.projects
   .section
