--- a/_harp/resume/index.jade
+++ b/_harp/resume/index.jade
@@ -1,7 +1,7 @@
 .section
   .container.page-header
-    h1 Resume
-    a(href="Teresa_Krause_resume.pdf") #[i.fa.fa-2x.fa-download] Download as a pdf
+    h1 #[a(href="/") #[i.fa.fa-home]] Resume
+    a(href="Teresa_Krause_resume.pdf") Download as a pdf #[i.fa.fa.fa-file-pdf-o]
 
 .section
   .container.resume
