--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -1,34 +1,64 @@
 html(lang="en")
   head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(
-      name='viewport'
-      content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0")
+
+    // ========== Bootstrap ==========
     link(
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+      href="/styles/bootstrap.min.css")
+
+    // ========== Fonts ==========
     link(
-     rel="stylesheet" 
-     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
-    link(href='/style.css', rel='stylesheet')
+      rel="stylesheet" 
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
+    
+    link(
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,700")
+
+    link(
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Kaushan+Script")
+
+    link(
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic")
+
+    link(
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700")
+
+    link(
+      rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800")
+      
+    link(
+      rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic")
+    
+    // ========== Theme & Projet CSS ==========
+    link(
+      rel="stylesheet"
+      href="styles/agency.css")
+
 
     // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
     //if lt IE 9
-    script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
-    script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
+    script(src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js")
+    script(src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js")
+
     title Teresa Krause
-  body
-    //- nav.navbar.navbar-default
-    //-   .container-fluid
-    //-     .navbar-header
-    //-       a.navbar-brand(href="/") Home
-    //-     .navbar-collapse.collapsed
-    //-       ul.nav.navbar-nav
-    //-         li
-    //-           a(href="/resume") Resume
-    //-         li 
-    //-           a(href="/projects") Projects
-    != yield
-  script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js')
-  script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
+
+  body.index#page-top
+    != yield  
+
+  // ========== Scripts ==========
+  script(src="/js/jquery-2.2.4.min.js")
+  script(src="/js/bootstrap.min.js")
+  script(src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js")
+  script(src="/js/agency.min.js")
+
